	PR tree-optimization/40074 	* tree-vect-data-refs.c (vect_analyze_group_access): Take gaps into 	account in group size and step comparison.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@147372 138bc75d-0d04-0410-961f-82ee72b054a4